fixed alot of css issues and landing page is fully responsive
fixed alot of css issues that lead to overflowing on some browsers added breakpoints for swiper

the landing page is fully responsive now

--- a/Website/e-commerce-ui/src/Components/Home/CommentsHome/CommentsHome.css
+++ b/Website/e-commerce-ui/src/Components/Home/CommentsHome/CommentsHome.css
@@ -57,19 +57,19 @@
     width: 1rem;
 }
 .swiper-button-prev, .swiper-button-next{
-    background-color: black;
-    border-radius: 50%;
-    width: 62px !important;
-    height: 62px !important;
-    color: #FFFFFF !important;
+    /*background-color: black;*/
+    /*border-radius: 50%;*/
+    /*width: 62px !important;*/
+    /*height: 62px !important;*/
+    color: var(--textColor) !important;
 }
 
-.swiper-button-prev::after{
-    width: 30px;
-}
-.swiper-button-next::after{
-    width: 20px;
-}
+/*.swiper-button-prev::after{*/
+/*    width: 30px;*/
+/*}*/
+/*.swiper-button-next::after{*/
+/*    width: 20px;*/
+/*}*/
 @media (max-width: 768px) {
     .Comment{
         padding: 2.5rem;
