--- a/Website/e-commerce-ui/src/Components/Home/FeaturedBlogs/FeaturedBlogs.css
+++ b/Website/e-commerce-ui/src/Components/Home/FeaturedBlogs/FeaturedBlogs.css
@@ -1,7 +1,7 @@
 .Blogs {
     font-family: 'Libre Baskerville', serif;
     /*text-align: center;*/
-    margin-bottom: 1rem;
+
 }
 .Blogs .title {
      font-size: 28px;
@@ -12,6 +12,7 @@
  }
 
 .Blogs #buttonSpace{
+    margin-top: 2rem;
     text-align: center;
 }
 .Blogs #buttonSpace #viewAll{
@@ -47,7 +48,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: baseline;
     padding: 2rem;
     background: var(--accentColor);
@@ -58,6 +59,7 @@
     height: 480px;
     width: 480px;
     border-radius: 10px 0 0 10px;
+    object-fit: cover;
 }
 
 .Blog #BlogDetails #type, .Blog #BlogDetails #text {
@@ -72,7 +74,7 @@
 
 .Blog #BlogDetails span {
     align-self: baseline;
-    background: black;
+    background: var(--accentColor2);
     width: 55px;
     height: 1px;
 }
@@ -104,4 +106,29 @@
 
 .Blog #footer a:hover {
     background: rgba(227, 223, 223, 0.75);
+}
+
+@media (max-width: 768px) {
+    .Blog{
+        height: 20rem;
+        width: 100%;
+    }
+    .Blog #CoverImg {
+        height: 100%;
+        width: 40vw;
+    }
+    .Blog #BlogDetails {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: baseline;
+        padding: 1rem;
+    }
+    .Blog #BlogDetails h3 {
+        font-size: 13px;
+    }
+    .Blog #BlogDetails h2 {
+        font-size: 16px;
+    }
 }
