--- a/Website/e-commerce-ui/src/Components/Home/IntersectionAd/IntersectionAd.css
+++ b/Website/e-commerce-ui/src/Components/Home/IntersectionAd/IntersectionAd.css
@@ -5,8 +5,7 @@
     background-size: cover;
     align-items: center;
     justify-content: center;
-    margin: 1.5rem 1.5rem 1.5rem 2rem;
-    font-family: 'Libre Baskerville', serif;
+    margin: 1rem;
     border-radius: 10px;
 
 }
