--- a/Website/e-commerce-ui/src/Components/Home/TrendingOffers/TrendingOffers.css
+++ b/Website/e-commerce-ui/src/Components/Home/TrendingOffers/TrendingOffers.css
@@ -47,7 +47,6 @@
     }
 
     .TrendingOffer #OfferDetails {
-        display: flex;
         width: 6rem;
         height: calc(100% - 2rem);
         justify-content: space-around;
